# Website-Project

./: .env.development  .env.production  .gitignore  123  123.pub  CART_DELETE_IMPLEMENTATION.md  Dockerfile  alembic.ini  arch.drawio  back.txt  client.sh  configure-api.sh  dev-start.sh  docker-compose.dev.yml  docker-compose.yml  fill-db.sh  https.drawio  prod-start.sh  pyproject.toml  requirements.txt  stop-all.sh
.next/: trace
alembic/: env.py
alembic/versions/: 03d092d6f56f_new_productmodel_structure.py  39e8f1bdd49f_first_migration.py  601d0af560f3_add_shipping_and_payment_fields_to_.py  787219884b02_new_cartproductmodel.py  921265bc075f_new_productmodel.py  aa066267d424_new_ordermodel.py  bf13d5c59024_add_variant_fields_to_cart_products.py  ce7f089afaac_save_test_db.py  de40309de281_merge_cart_variant_and_x.py
frontend/: .env.example  Dockerfile  layout.tsx  middleware.ts  next.config.mjs  next.config.ts  openapi.json  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: client-layout.tsx  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
frontend/app/[page]/: opengraph-image.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/checkout/: README.md  actions.ts  layout.tsx  page.tsx
frontend/app/contact/: page.tsx
frontend/app/login/: page.tsx
frontend/app/orders/: page.tsx
frontend/app/register/: page.tsx
frontend/app/search/: layout.tsx  page.tsx
frontend/components/: LoginButton .tsx  carousel.tsx  opengraph-image.tsx  product-list.tsx
frontend/components/auth/: auth-context.tsx
frontend/components/cart/: actions.ts  add-to-cart.tsx  cart-context.tsx  delete-example.tsx  delete-item-button.tsx  modal.tsx  open-cart.tsx  (+1 more)
frontend/lib/: auth-cookies.ts  cart.ts  config.ts  constants.ts  utils.ts
init-scripts/: 01-create-database.sh
src/: config.py  database.py  main.py
src/application/: logger.py
src/exceptions/: carts.py  order_exceptions.py  product_exceptions.py  user_exceptions.py
src/models/: __init__.py  base.py  cart.py  cart_product.py  category.py  order.py  order_product.py  product.py  review.py  user.py
src/repositories/: __init__.py  cart.py  cart_product.py  category.py  order.py  order_product.py  product.py  review.py  user.py
src/services/: cart.py  cart_product.py  order.py  product.py  user.py
tests/: conftest.py
tests/routers/: test_order.py  test_product.py  test_review.py  test_user.py
tests/units/: test_fill_db_with_data.py  test_token_services.py
(+52 files in other folders)
